fixed show time function and re styled invisible elements

--- a/frontend-app/src/styles/time.scss
+++ b/frontend-app/src/styles/time.scss
@@ -4,6 +4,10 @@
         margin: 20px;
         text-align: center;
 
+        .non-date {
+            visibility: hidden;
+        }
+
         .time {
             border: 1px solid rgb(20, 134, 173);
             padding: 5px;
@@ -11,7 +15,10 @@
         }
 
         .time-not {
-            padding: 15px;
+            border: 1px solid rgb(20, 134, 173);
+            padding: 5px;
+            border-radius: 4px;
+            visibility: hidden;
         }
     }
 }
